--- a/lab8__478.html
+++ b/lab8__478.html
@@ -49,7 +49,7 @@
 
        
         var popupTemplate = {
-          title: "{Name}",
+          title: "{Connor's recnet course locations}",
           actions: [{
             id: "find",
             title: "Find More Info"
