--- a/lab8__478.html
+++ b/lab8__478.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My recent courses on East Campus</title>
+    <title>My Favorite Buildings on East Campus</title>
     <link rel="stylesheet" href="https://js.arcgis.com/4.6/esri/css/main.css">
     <script src="https://js.arcgis.com/4.6/"></script>
     <style>
@@ -38,7 +38,7 @@
   </head>
   <body>
     <!-- Title at the top center -->
-    <div id="titleDiv">My recent courses on East Campus</div>
+    <div id="titleDiv">My Favorite Buildings on East Campus</div>
     <!-- Map container -->
     <div id="viewDiv"></div>
     <script>
